one page commit

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 
 		<!-- Header -->
 			<header id="header">
-				<h1>Big Picture</h1>
+				<img src="images/dar-studio_transparent.png" alt="Dartois Studio Logo" style="height: 40px; margin-right: 10px;">
+				<h1>Dartois Studio</h1>
 				<nav>
 					<ul>
 						<li><a href="#intro">Intro</a></li>
