css - header logo

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<img src="images/dar-studio_transparent.png" alt="Dartois Studio Logo" style="height: 40px; margin-right: 10px;">
+				<img src="images/dar-studio_transparent.png" alt="Dartois Studio Logo" class="logo">
 				<h1>Dartois Studio</h1>
 				<nav>
 					<ul>
