--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<img src="images/dar-studio_transparent.png" alt="Dartois Studio Logo" class="logo">
+				<img src="images/dar-studio_transparent.png" alt="Logo Dartois Studio" id="logo">
 				<h1>Dartois Studio</h1>
 				<nav>
 					<ul>
@@ -31,10 +31,9 @@
 			<section id="intro" class="main style1 dark fullscreen">
 				<div class="content">
 					<header>
-						<h2>Hey.</h2>
+						<h2>Salut,</h2>
 					</header>
-					<p>Welcome to <strong>Big Picture</strong> a responsive site template designed by <a href="https://html5up.net">HTML5 UP</a><br />
-					and released for free under the <a href="https://html5up.net/license">Creative Commons Attribution license</a>.</p>
+					<p>Moi, c’est Guillaume. Voici <strong>Dartois Studio </strong> un espace dédié au graphisme minimaliste, inspiré par ma passion pour le RC Lens."</p>
 					<footer>
 						<a href="#one" class="button style2 down">More</a>
 					</footer>
