--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 				<h1>Dartois Studio</h1>
 				<nav>
 					<ul>
-						<li><a href="#intro">Dartois STudio</a></li>
-						<li><a href="#one">Dartois Studio, c'est quoi ?</a></li>
-						<li><a href="#two">Qui je suis ?</a></li>
-						<li><a href="#work">Mon travail</a></li>
+						<li><a href="#intro">Intro</a></li>
+						<li><a href="#one">Dartois, c'est quoi ?</a></li>
+						<li><a href="#two">Qui suis-je ?</a></li>
+						<li><a href="#work">Mes créations</a></li>
 						<li><a href="#shop"><strong>SHOP</strong></a></li>
 						<li><a href="#contact">Contact</a></li>
 					</ul>
