--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 			<section id="two" class="main style2 left dark fullscreen">
 				<div class="content box style2">
 					<header>
-						<h2>Qui je suis ?</h2>
+						<h2>Qui suis-je ?</h2>
 					</header>
 					<p>
 						Je m'apelle Guillaume et je suis Designer depuis plus de 15 ans, je suis également un grand fan du RC Lens depuis mon enfance. 
