--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 						<h2>Salut,</h2>
 					</header>
 					<p>Moi, c’est <strong>Guillaume.</strong></p>
-					<p>Bienvenue dans <strong>Dartois Studio !</strong> Ici, je mêle ma passion pour le graphisme minimaliste et mon amour du RC Lens pour créer des designs uniques et épurés.</p>
+					<p>Bienvenue dans <strong>Dartois Studio !</strong> </p>
+					<p>Ici, je mêle ma passion pour le graphisme minimaliste et mon amour du RC Lens pour créer des designs uniques et épurés.</p>
 					<footer>
 						<a href="#one" class="button style2 down">More</a>
 					</footer>
@@ -64,7 +65,7 @@
 						<h2>Qui suis-je ?</h2>
 					</header>
 					<p>
-						Je m'apelle Guillaume et je suis Designer depuis plus de 15 ans, je suis également un grand fan du RC Lens depuis mon enfance. 
+						Je m'appelle Guillaume et je suis Designer depuis plus de 15 ans, je suis également un grand fan du RC Lens depuis mon enfance. 
 						Passionné par le design sobre et minimaliste, j'expose déjà mon univers graphique à travers l'association Lens Capitale, pour laquelle j'ai imaginé l'identité visuelle et créé divers graphismes et goodies. 
 						Poussé par la volonté de réunir mes deux passions, j'ai créé Dartois Studio pour explorer et expérimenter sans cesse de nouvelles idées et concepts.
 					</p>
